[gd_scene load_steps=3 format=3 uid="uid://qte6w1wwa5kn"]

[ext_resource type="Script" path="res://main.gd" id="1_5nich"]

[sub_resource type="ImageTexture" id="ImageTexture_tpu8t"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5nich")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
texture = SubResource("ImageTexture_tpu8t")
expand_mode = 1
stretch_mode = 5

[node name="Timeline" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayPauseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "play/pause"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="drag_ended" from="VBoxContainer/Timeline" to="." method="_on_timeline_drag_ended"]
[connection signal="drag_started" from="VBoxContainer/Timeline" to="." method="_on_timeline_drag_started"]
